--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,22 +1,32 @@
 <div id="top-menu">
-	<div id="account">
-		<ul>
-			<li>
-				<%= link_to t("users.my.title")+(@user != nil ? "(#{@user.name})" : ""), users_my_path %>
-			</li>
-			<li>
-				<%= link_to t("common.link.logout"), users_logout_path %>
-			</li>
-		</ul>
-	</div>
-	<!-- <div id="loggedas">
-		<%= t "common.title.loggedas" %> : <%#= @user.name %>
-	</div> -->
-	
-	<ul>
-		<li>
-			<%= link_to t("common.title.main"), :controller => "main", :action => "index" %>
-		</li>
-	</ul>
+  <div id="account">
+    <ul>
+      <li>
+        <%= link_to t("users.my.title")+(@user != nil ? "(#{@user.name})" : ""), users_my_path %>
+      </li>
+      <li>
+        <%= link_to t("common.link.logout"), users_logout_path %>
+      </li>
+    </ul>
+  </div>
+  <!-- <div id="loggedas">
+    <%= t "common.title.loggedas" %> : <%#= @user.name %>
+  </div> -->
+
+  <div id="company">
+    <ul>
+      <li>
+        <%= form_tag switch_company_index_path do %>
+          <%= select_tag :company_id, options_for_select(Company.all.map{|company| [company.name, company.id]}, current_company.id), "onchange" => "this.form.submit()" %>
+        <% end %>
+      </li>
+    </ul>
+  </div>
+
+  <ul>
+    <li>
+      <%= link_to t("common.title.main"), :controller => "main", :action => "index" %>
+    </li>
+  </ul>
 </div>
 
