--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -26,6 +26,17 @@ table#list-table.payment-table
           td.numrow[class=td_class]
             = number_to_currency user.payments.where("pay_at BETWEEN ? AND ?", period, period + 1.month - 1.day).total
           - period -= 1.month
+  tr
+    td
+    - period = Time.zone.parse("#{to.year}-#{to.month}-01 00:00:00")
+    - while from < period
+      - td_class = (period.month == Time.zone.now.month ? :today : '')
+      td.numrow[class=td_class]
+        = "-----------------------"
+        br
+        = number_to_currency @payments.where("pay_at BETWEEN ? AND ?", period, period + 1.month - 1.day).total
+      - period -= 1.month
+  
 
 br
 
