--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -9,7 +9,7 @@ p= "상태 - #{report.localize_status}"
       = hidden_field_tag :cardbill_id, target.id
       p
         = label_tag :reporter
-        = select_tag :reporter, options_for_select(Hrinfo.all.map{|hrinfo| [hrinfo.fullname, hrinfo.id]}, (report.reporter.id if report.reporter))
+        = select_tag :reporter, options_for_select(Hrinfo.all.delete_if{|hrinfo| hrinfo == current_user.hrinfo}.map{|hrinfo| [hrinfo.fullname, hrinfo.id]}, (report.reporter.id if report.reporter))
       p
         = label_tag :comment
         = text_field_tag :comment
@@ -39,4 +39,7 @@ p= "상태 - #{report.localize_status}"
       = comment.description
 h3 권한
 p= "읽기,쓰기: #{report.reporter.fullname}"
+- report.other_reporters.each do |reporter|
+  p= "읽기: #{reporter.fullname}"
+
 br
