--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -8,10 +8,10 @@ p= "상태 - #{report.localize_status}"
     = form_tag :report do
       = hidden_field_tag :cardbill_id, target.id
       p
-        = label_tag :reporter
+        = label_tag :reporter, t('activerecord.attributes.report.reporter')
         = select_tag :reporter, options_for_select(Hrinfo.all.delete_if{|hrinfo| hrinfo == current_user.hrinfo}.map{|hrinfo| [hrinfo.fullname, hrinfo.id]}, (report.reporter.id if report.reporter))
       p
-        = label_tag :comment
+        = label_tag :comment, t('activerecord.attributes.report.comment')
         = text_field_tag :comment
       p
         - if report.rollback?
@@ -21,7 +21,7 @@ p= "상태 - #{report.localize_status}"
     = form_tag :report do
       = hidden_field_tag :cardbill_id, target.id
       p
-        = label_tag :comment
+        = label_tag :comment, t('activerecord.attributes.report.comment')
         = text_field_tag :comment
       p
         - if report.rollback?
