--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -6,7 +6,8 @@ p= "상태 - #{report.localize_status}"
 - if report.status != :reported and report.reporter.hrinfo == current_user.hrinfo
   - unless current_user.ingroup?(:admin)
     = form_tag :report do
-      = hidden_field_tag :cardbill_id, target.id
+      = hidden_field_tag :target_type, target.class
+      = hidden_field_tag :target_id, target.id
       p
         = label_tag :reporter, t('activerecord.attributes.report.reporter')
         = select_tag :reporter, options_for_select(Hrinfo.all.delete_if{|hrinfo| hrinfo == current_user.hrinfo}.map{|hrinfo| [hrinfo.fullname, hrinfo.id]}, (report.reporter.id if report.reporter))
@@ -19,7 +20,8 @@ p= "상태 - #{report.localize_status}"
         = submit_tag "상신"
   - else
     = form_tag :report do
-      = hidden_field_tag :cardbill_id, target.id
+      = hidden_field_tag :target_type, target.class
+      = hidden_field_tag :target_id, target.id
       p
         = label_tag :comment, t('activerecord.attributes.report.comment')
         = text_field_tag :comment
