--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -1,4 +1,4 @@
-- report = target.report || target.build_report
+- report = target.report
 
 h3 결제
 p= "상태 - #{report.localize_status}"
@@ -30,15 +30,16 @@ p= "상태 - #{report.localize_status}"
           = submit_tag "반려"
         = submit_tag "승인"
 
-.box
-  - report.comments.lastest.each do |comment|
-    p
-      = "["
-      = comment.created_at.strftime("%Y.%m.%d %H:%M:%S")
-      = "]"
-      = comment.owner.hrinfo.fullname
-      = ": "
-      = comment.description
+- unless report.comments.empty?
+  .box
+    - report.comments.lastest.each do |comment|
+      p
+        = "["
+        = comment.created_at.strftime("%Y.%m.%d %H:%M:%S")
+        = "]"
+        = comment.owner.hrinfo.fullname
+        = ": "
+        = comment.description
 h3 권한
 p= "읽기,쓰기: #{report.reporter.fullname}"
 
