apply company association to contact

--- a/app/views/contacts/_form.html.slim
+++ b/app/views/contacts/_form.html.slim
@@ -13,8 +13,8 @@ h2= t("common.title.#{action_name}")
       = f.label :firstname
       = f.text_field :firstname
     p
-      = f.label :company
-      = f.text_field :company
+      = f.label :company_name
+      = f.text_field :company_name
     p
       = f.label :department
       = f.text_field :department
