--- a/app/views/contacts/_item.html.slim
+++ b/app/views/contacts/_item.html.slim
@@ -3,8 +3,8 @@ table
     th= t("contacts.name")
     td= contact.name
   tr
-    th= contact.class.human_attribute_name(:company)
-    td= contact.company
+    th= contact.class.human_attribute_name(:company_name)
+    td= contact.company_name
   tr
     th= contact.class.human_attribute_name(:department)
     td= contact.department
