--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -2,10 +2,15 @@
 
 <div id="show_command">
   <% if @cardbill.used %>
-    <%#= link_to t('.to_used'), [@cardbill.used.creditcard, @cardbill.used] %>
     <%= link_to "사용 내역", @cardbill.used %>
     |
   <% end %>
+  <% if @cardbill.expense_report %>
+    <%= link_to "지출내역서 보기", @cardbill.expense_report %>
+  <% else %>
+    <%= link_to "지출내역서 만들기", new_expense_report_path(target_type: @cardbill.class, target_id: @cardbill.id) %>
+  <% end %>
+  |
   <% if @cardbill.approved %>
     <%= link_to t('.to_approved'), @cardbill.approved %> |
   <% end %>
