--- a/app/views/expense_reports/show.html.slim
+++ b/app/views/expense_reports/show.html.slim
@@ -27,3 +27,7 @@ h2 지출내역서 상세정보
     tr
       th= expense_report.class.human_attribute_name(:amount)
       td= number_to_currency expense_report.amount
+
+= render 'reports/info', target: expense_report
+
+
