--- a/app/views/bank_accounts/index.html.slim
+++ b/app/views/bank_accounts/index.html.slim
@@ -2,6 +2,10 @@
 #show_command
   = link_to "합계표 보기", [:total, :bank_accounts]
   = " | "
+  = link_to "입출금내역 보기", :bank_transactions
+  = " | "
+  = link_to "이체내역 보기", :bank_transfers
+  = " | "
   = link_to "은행계좌 만들기", [:new, :bank_account]
   = " | "
   = link_to t('common.title.back'), :root
