--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -67,7 +67,7 @@ table tr td ul {
         <% end %>
       </ul>
       <ul>
-        <% if @user.permission.any? {|perm| perm.name == 'expense_report'}  %>
+        <% if @user.permission.any? {|perm| perm.name == 'expense_reports'}  %>
           <li><%= link_to t("expense_reports.index.title"), :expense_reports %></li>
         <% end %>
       </ul>
