--- a/app/views/bank_transactions/preview.html.slim
+++ b/app/views/bank_transactions/preview.html.slim
@@ -20,4 +20,4 @@ h2= t(".title")
   br
 
 h3 프리뷰
-= render 'list', bank_transactions: @transactions, menu: false
+= render 'list', bank_transactions: @transactions
