--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -18,7 +18,7 @@ h2
     = "은행 거래내역"
 
 - unless @bank_transactions.empty?
-  = render 'list', menu: true, bank_transactions: @bank_transactions
+  = render 'list', bank_transactions: @bank_transactions
 
   br
   center
