--- a/app/views/expense_reports/_form.html.slim
+++ b/app/views/expense_reports/_form.html.slim
@@ -12,7 +12,7 @@ h2= t("common.title.#{action_name}")
       = f.select :hrinfo_id, options_for_select(Hrinfo.all.map{|info| [info.fullname, info.id]})
     p
       = f.label :project_id
-      = f.select :project_id, options_for_select(Project.all.map{|project| [project.name, project.id]}, expense_report.project_id)
+      = f.select :project_id, options_for_select(Project.inprogress.assign_list(current_user).map{|project| [project.name, project.id]}, expense_report.project_id)
     p
       = f.label :description
       = f.text_area :description
