--- a/app/views/cardbills/index.html.erb
+++ b/app/views/cardbills/index.html.erb
@@ -14,7 +14,7 @@
 <%= link_to t('common.title.new'), new_cardbill_path %>
 </div>
 
-<h2>Total : <%= @cardbills_count %></h2>
+<h2>Total : <%= @cardbills.count %></h2>
 <table id="list-table">
   <tr>
     <th><%= Cardbill.human_attribute_name('cardno') %></th>
