--- a/app/views/holidays/index.html.slim
+++ b/app/views/holidays/index.html.slim
@@ -5,7 +5,10 @@
   = " | "
   = link_to t('common.title.back'), :root
 
-h2= t('common.title.list')
+h2= t("common.title.list")
+p
+  = Date.today.year.to_s + t(".this_years_working_days")
+  = Holiday.working_days_this_year.collect { |m,c| a = t(".month_and_count", m: m, c: c); a = "<u><b>#{a}</b></u>" if m == Date.today.month; a }.join(", ").html_safe
 table#list-table
   tr
     th= Holiday.human_attribute_name("theday")
