--- a/app/views/bank_transfers/index.html.slim
+++ b/app/views/bank_transfers/index.html.slim
@@ -18,7 +18,7 @@ h2
     = "은행 이체내역"
 
 - unless @bank_transfers.empty?
-  = render 'list', menu: true, bank_transfers: @bank_transfers
+  = render 'list', bank_transfers: @bank_transfers
 
   br
   center
