--- a/app/views/bank_transfers/preview.html.slim
+++ b/app/views/bank_transfers/preview.html.slim
@@ -16,4 +16,4 @@ h2 ..
 br
 
 h3 프리뷰
-= render 'list', bank_transfers: @bank_transfers, menu: false
+= render 'list', bank_transfers: @bank_transfers
