--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -196,6 +196,14 @@ div.flash.notice {
   border-color: #9fcf9f;
   color: #005f00;
 }
+
+div.flash.alert {
+  background: url(../images/true.png) 8px 5px no-repeat;
+  background-color: red;
+  border-color: red;
+  color: white;
+}
+
 .box {
   padding: 6px;
   margin-bottom: 10px;
