--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,7 @@
   </div> -->
   <div id="content">
     <% if flash[:notice] %><div class="flash notice"><%= flash[:notice] %></div><% end %>
+    <% if flash[:alert] %><div class="flash alert"><%= flash[:alert] %></div><% end %>
     <%= yield %>
   </div>
 </div>
