--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -24,7 +24,7 @@ table#list-table.payment-table
         - while from < period
           - td_class = (period.month == Time.zone.now.month ? :today : '')
           td.numrow[class=td_class]
-            = number_to_currency user.payments.where("pay_at BETWEEN ? AND ?", period, period + 1.month - 1.day).total
+            = number_to_currency user.payments.by_period(period).total
           - period -= 1.month
   tr
     td
@@ -34,9 +34,9 @@ table#list-table.payment-table
       td.numrow[class=td_class]
         = "-----------------------"
         br
-        = number_to_currency @payments.where("pay_at BETWEEN ? AND ?", period, period + 1.month - 1.day).total
+        = number_to_currency @payments.by_period(period).total
       - period -= 1.month
-  
+
 
 br
 
