--- a/app/views/dayworkers/index.html.slim
+++ b/app/views/dayworkers/index.html.slim
@@ -1,6 +1,8 @@
 - title t('.title')
 
 #show_command
+  = link_to t('common.title.new'), new_dayworker_path
+  = ' | '
   = link_to t('common.title.back'), :root
 
 h2= t('common.title.list')
