--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -63,7 +63,11 @@
   </tr>
 </table>
 
-<%= render 'reports/info', target: @cardbill %>
+<% if @cardbill.status == 'verified' %>
+  <%= render 'reports/info', target: @cardbill %>
+<% else %>
+  <h3>결제(불가능)</h3>
+<% end %>
 <%= render 'changelog', target: @cardbill %>
 
 </div>
