--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -223,6 +223,11 @@ div.flash.alert {
   margin-left: 20px;
 }
 
+#reference {
+  float: left;
+  margin-left: 100px;
+}
+
 #show_command {
   float: right;
 }
