--- a/app/views/payments/index.html.slim
+++ b/app/views/payments/index.html.slim
@@ -24,7 +24,7 @@ table#list-table.payment-table
         - while from < period
           - td_class = (period.month == Time.zone.now.month ? :today : '')
           td.numrow[class=td_class]
-            = number_to_currency user.payments.by_period(period.to_date).total
+            = number_to_currency user.payments.by_month(period.to_date).total
           - period -= 1.month
   tr
     td
@@ -34,7 +34,7 @@ table#list-table.payment-table
       td.numrow[class=td_class]
         = "-----------------------"
         br
-        = number_to_currency @payments.by_period(period.to_date).total
+        = number_to_currency @payments.by_month(period.to_date).total
       - period -= 1.month
 
 
