--- a/app/views/bank_transactions/index.html.slim
+++ b/app/views/bank_transactions/index.html.slim
@@ -5,8 +5,9 @@
       "onchange" => "this.form.submit()"
 
 #show_command
-  = link_to t('bank_transactions.verify.link'), [:verify, :bank_transactions]
-  = " | "
+  - unless params[:bank_account_id].blank?
+    = link_to t('bank_transactions.verify.link'), verify_bank_transactions_path(bank_account_id: params[:bank_account_id])
+    = " | "
   = link_to t('bank_transactions.new.link'), [:new, :bank_transaction]
   = " | "
   = link_to t('bank_transactions.excel.link'), [:excel, :bank_transactions]
