--- a/app/views/cardbills/show.html.erb
+++ b/app/views/cardbills/show.html.erb
@@ -31,6 +31,7 @@
 
 <%= render 'detail', target: @cardbill %>
 
+  <%= render 'reports/info', target: @cardbill %>
 <% if @cardbill.status == 'verified' %>
   <%= render 'reports/info', target: @cardbill %>
 <% else %>
