--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -17,7 +17,7 @@ h2
     = "카드 승인내역"
 
 - unless @card_approved_sources.empty?
-  = render 'list', card_approved_sources: @card_approved_sources, menu: true
+  = render 'list', card_approved_sources: @card_approved_sources
 
   br
   center
