--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -16,7 +16,7 @@ h2
     = "카드 이용내역"
 
 - unless @card_used_sources.empty?
-  = render 'list', card_used_sources: @card_used_sources, menu: true
+  = render 'list', card_used_sources: @card_used_sources
 
   br
   center
