--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -1,5 +1,8 @@
 - content_for :search do
   = form_tag :card_used_sources, :method => :get do
+    = t("common.title.search")
+    = " : "
+    = text_field_tag 'query', params[:query]
     = select_tag :creditcard_id,
       options_from_collection_for_select([Creditcard.new(:cardno => "all")]+Creditcard.all, :id, :cardno_long, params[:creditcard_id]),
       "onchange" => "this.form.submit()"
