--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -9,6 +9,8 @@
 
 
 #show_command
+  = link_to t('card_approved_sources.generate_cardbill.link'), [:generate_cardbills, :card_approved_sources]
+  = " | "
   = link_to t('card_approved_sources.new.link'), [:new, :card_approved_source]
   = " | "
   = link_to t('common.title.back'), :root
