--- a/app/views/card_approved_sources/index.html.slim
+++ b/app/views/card_approved_sources/index.html.slim
@@ -13,7 +13,7 @@
   = " | "
   = link_to t('card_approved_sources.new.link'), [:new, :card_approved_source]
   = " | "
-  = link_to t('common.title.back'), :root
+  = link_to t('common.title.back'), :creditcards
 
 h2
   - if creditcard
