--- a/app/views/card_used_sources/index.html.slim
+++ b/app/views/card_used_sources/index.html.slim
@@ -10,7 +10,7 @@
 #show_command
   = link_to t('card_used_sources.new.link'), [:new, :card_used_source]
   = " | "
-  = link_to t('common.title.back'), :root
+  = link_to t('common.title.back'), :creditcards
 
 h2
   - if creditcard
