--- a/app/views/hrinfos/try_retired.html.erb
+++ b/app/views/hrinfos/try_retired.html.erb
@@ -17,7 +17,7 @@
       </tr>
     <%= @hrinfo.user.payments.pay_from(@hrinfo.retired_on).find_each do |payment| %>
       <tr>
-        <td><%= payment.pay_at.strftime("%Y.%m") %></td>
+        <td><%= payment.pay_finish.strftime("%Y.%m") %></td>
         <td><%= payment.note %></td>
         <td><%= number_to_currency payment.amount %></td>
         <td><%= number_to_currency payment.retired_amount(@hrinfo.retired_on) %></td>
