--- a/app/views/payments/yearly.html.slim
+++ b/app/views/payments/yearly.html.slim
@@ -11,8 +11,8 @@ h2= t("common.title.new")
       = label_tag :join_at, t('activerecord.attributes.payment.pay_start')
       = date_select :payments, :join_at, :order => [:year, :month, :day]
     p
-      = label_tag :pay_end, t('activerecord.attributes.payment.pay_end')
-      = date_select :payments, :pay_end, :order => [:year, :month, :day], default: Date.today + 1.year
+      = label_tag :pay_finish, t('activerecord.attributes.payment.pay_finish')
+      = date_select :payments, :pay_finish, :order => [:year, :month, :day], default: Date.today + 1.year - 1.day
     p
       = label_tag "payments[amount]", t('activerecord.attributes.payment.amount')
       = text_field_tag "payments[amount]"
