--- a/app/views/payments/_form.html.erb
+++ b/app/views/payments/_form.html.erb
@@ -9,10 +9,21 @@
    <%= f.error_messages %>
    <%= f.hidden_field :payment_type %>
   <div class="box">
-    <p>
-      <%= f.label :pay_at %>
-      <%= f.date_select :pay_at, :order => [:year, :month, :day] %>
-    </p>
+    <% if payment.payment_type == 'default' %>
+      <p>
+        <%= f.label :pay_start %>
+        <%= f.date_select :pay_start, :order => [:year, :month, :day] %>
+      </p>
+      <p>
+        <%= f.label :pay_finish %>
+        <%= f.date_select :pay_finish, :order => [:year, :month, :day] %>
+      </p>
+    <% else %>
+      <p>
+        <%= f.label :pay_finish, t('activerecord.attributes.payment.pay_at') %>
+        <%= f.date_select :pay_finish, :order => [:year, :month, :day] %>
+      </p>
+    <% end %>
     <p>
       <%= f.label :amount %>
       <%= f.text_field :amount %>
