--- a/app/views/payments/calculate.html.slim
+++ b/app/views/payments/calculate.html.slim
@@ -10,11 +10,12 @@ h2= t("common.title.new")
     - payment_step do |before, after, amount|
       - before = before.strftime("%Y.%m.%d")
       - after = after.strftime("%Y.%m.%d")
+      - field = "#{before} ~ #{after}"
       p
-        = label_tag "payments[#{after}]", "#{before} ~ #{after}"
-        = text_field_tag "payments[#{after}][default][title]", "기본급"
-        = text_field_tag "payments[#{after}][default][amount]", amount
-        = text_field_tag "payments[#{after}][bonus][title]", "상여금"
-        = text_field_tag "payments[#{after}][bonus][amount]", 0
+        = label_tag "payments[#{field}]", field
+        = text_field_tag "payments[#{field}][default][title]", "기본급"
+        = text_field_tag "payments[#{field}][default][amount]", amount
+        = text_field_tag "payments[#{field}][bonus][title]", "상여금"
+        = text_field_tag "payments[#{field}][bonus][amount]", 0
     p
       = submit_tag t("common.button.add"), :id => "submit"
