--- a/app/views/users/login.html.erb
+++ b/app/views/users/login.html.erb
@@ -1,5 +1,5 @@
 <%#= stylesheet_link_tag 'main', :cache => true %>
-<% title "-" %>
+<% title t("users.login.title") %>
 <div id="login-form">
   <%= form_tag do %>
     <div class="box">
