change permission type of report. #8719

--- a/app/views/reports/_info.html.slim
+++ b/app/views/reports/_info.html.slim
@@ -3,7 +3,7 @@
 h3 결제
 p= "상태 - #{report.localize_status}"
 
-- if target.access?(current_user)
+- if target.access?(current_user, :write)
   - unless current_user.ingroup?(:admin)
     = form_tag :report do
       = hidden_field_tag :target_type, target.class
@@ -42,6 +42,7 @@ p= "상태 - #{report.localize_status}"
         = ": "
         = comment.description
 h3 권한
-p= "읽기,쓰기: #{report.reporter.fullname}"
+p= "쓰기: #{report.reporter.fullname}"
+p= "읽기: #{report.reporters.map{|reporter| reporter.fullname}.join(', ')}"
 
 br
