add ledger account #8728

--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -104,6 +104,7 @@ table tr td ul {
           <li><%= link_to t("permissions.title"), :controller => "permissions" %></li>
           <li><%= link_to t("change_histories.title"), :controller => "change_histories" %></li>
           <li><%= link_to t("holidays.title"), :controller => "holidays" %></li>
+          <li><%= link_to t("ledger_accounts.title"), :ledgers %></li>
         </ul>
       </td>
     <% end %>
